# logviewer

./: .gitignore  404.html  index.html  rakefile.rb  sitemap.xml
application/apps/indexer/session/: Cargo.toml  test.sh
application/apps/indexer/session/src/: events.rs  lib.rs  session.rs
application/apps/indexer/session/src/handlers/: observe.rs  search.rs
application/apps/indexer/session/src/state/: session_file.rs
application/apps/indexer/session/src/traits/: buffer.rs  collector.rs  error.rs  map.rs  mod.rs  output.rs  parser.rs  source.rs
application/apps/indexer/session/src/traits/holders/: utf8_text.rs
application/apps/indexer/session/src/traits/parsers/: mod.rs  utf8_text.rs
application/apps/indexer/session/src/traits/sources/: file.rs  mod.rs  text_file.rs  text_mapper.rs
application/apps/indexer/session/src/traits/tests/: file_utf8_test.rs  mod.rs
application/apps/indexer/session/src/unbound/: api.rs  mod.rs
application/apps/indexer/session/src/unbound/commands/: folder.rs  mod.rs
charts/: index.html
cli/: index.html
client/: .editorconfig  angular.json  package-lock.json  package.json  tsconfig.json
core/: .gitignore
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: main.rs
desktop/src/binding/: context.rs
desktop/src/binding/api/: chipmunk_log_level.rs  host_state.rs  init.rs  mod.rs  open_file_dialog.rs  stream_add_request.rs  stream_chunk.rs
desktop/src/binding/events/: grabbed.rs  mod.rs  stream_updated.rs
installation/: index.html
navigation/: index.html
search/: index.html  search_index.json
(+568 files in other folders)
