[package]
name = "session"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
indexer_base = { path = "../indexer_base" }
processor = { path = "../processor" }
merging = { path = "../merging" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.13", features = ["full"] }
tokio-util = "0.6"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.51"
bytes = "1.1.0"
encoding_rs_io = "0.1.7"
bytecount = "0.6.2"
futures-core = "0.3.18"
tokio-stream = "0.1.8"